# gamesengineering-courswork

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
practical_1/: AssetManager.cpp  AssetManager.h  Character.cpp  Character.h  CollisionManager.cpp  CollisionManager.h  Enemy.cpp  Enemy.h  GameOverScreen.cpp  GameOverScreen.h  Map.cpp  Map.h  PauseScreen.cpp  PauseScreen.h  SettingsScreen.cpp  SettingsScreen.h  StartScreen.cpp  StartScreen.h  StorylineManager.cpp  StorylineManager.h  Villager.cpp  Villager.h  Warrior.cpp  Warrior.h  WinScreen.cpp  WinScreen.h  main.cpp
